Fix: Dark mode for bar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,6 +14,7 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --announcementBarMain: rgb(217, 234, 253);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -26,6 +27,7 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --announcementBarMain: red;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --logo-color: #D3D3D3;
 }
@@ -40,8 +42,8 @@
   font-size: xx-large;
 }
 
-[data-theme='dark'] .navbar__logo {
-  color: #D3D3D3;
+[data-theme='dark'] .navbar__title {
+  color: #ff8080;
   /* Replace blue with your desired color */
 }
 
@@ -49,4 +51,8 @@
   font-family: "Jacquard 24", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+[data-theme='dark'] div[class*='announcementBar'] {
+  background-color: red;
 }
